--- a/my-angular-app/src/app/app.component.scss
+++ b/my-angular-app/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .hero-background {
-    height: 100vh;
+    min-height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5)), url('../assets/Images/IOT_Background.png');
     background-position: center center;
     background-size: cover;
