--- a/my-angular-app/src/app/home/home.component.html
+++ b/my-angular-app/src/app/home/home.component.html
@@ -1,6 +1,13 @@
-<button class="btn" (click)="toggleSidebarMenu()">
+<button class="btn z-2" (click)="toggleSidebarMenu()">
   <i class="fa-solid fa-bars"></i>
 </button>
+
+@if(shared.alertFlag)
+{
+<div>
+  <div class="alert alert-warning text-center alertNotify z-1">{{shared.alertMessage}}</div>
+</div>
+}
 
 <div class="sidebar" [ngStyle]="{'transform': toggleSidebar ? 'translateX(0)' : 'translateX(-100%)'}">
   <div class="title">
