--- a/my-angular-app/src/app/home/home.component.scss
+++ b/my-angular-app/src/app/home/home.component.scss
@@ -75,3 +75,11 @@ button i {
     color: white;
     padding-right: 1.875rem;
 }
+
+
+.alertNotify {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+}
