--- a/my-angular-app/src/app/street/street.component.html
+++ b/my-angular-app/src/app/street/street.component.html
@@ -63,19 +63,16 @@
                 <tr>
                     <td>{{ $index + 1 }}</td>
                     <td>{{ row['location'] }}</td>
+                    <td>{{ row['status'] }}</td>
+                    <td>{{ row['brightnessLevel'] }}</td>
                     <td>{{ row['powerConsumption'] }}</td>
-                    <td>
-                        <span>
-                            {{ row['brightnessLevel'] | titlecase }}
-                        </span>
-                    </td>
                     <td>{{ row['timestamp'] }}</td>
                 </tr>
                 }
                 @empty {
                 <tr>
 
-                    <td colspan="5" class="alert alert-danger mx-auto" style="text-align: center;">No data available
+                    <td colspan="6" class="alert alert-danger mx-auto" style="text-align: center;">No data available
                     </td>
                 </tr>
                 }
