--- a/my-angular-app/src/app/street/street.component.html
+++ b/my-angular-app/src/app/street/street.component.html
@@ -11,11 +11,11 @@
 
   <div class="traffic-content">
     <app-filter-panel
-      [location]="location"
-      [sortBy]="sortBy"
-      [sortMode]="sortMode"
-      [startDate]="startDate"
-      [endDate]="endDate"
+      [(location)]="location"
+      [(sortBy)]="sortBy"
+      [(sortMode)]="sortMode"
+      [(startDate)]="startDate"
+      [(endDate)]="endDate"
       [sortOptions]="['location', 'timestamp', 'brightnessLevel', 'powerConsumption']"
       (filter)="putFilter()"
     ></app-filter-panel>
